# rust-axum-ddd-example

./: .editorconfig  .env  .env.local  .env.sample  .gitignore  Cargo.toml  Makefile  Makefile.toml  compose.yaml  docker-compose.yaml  rustfmt.toml
docker/postgres/: Dockerfile
docker/postgres/entrypoint/: 1_create_app_user.sh
migrations/: 20240525151241_1_create_user_tbl.up.sql  20240525151241_1_create_users_tbl.up.sql  20240526083503_2_create_user_credentials_tbl.up.sql  20240901042516_{{ARGS}}.up.sql
src/: config.rs  di_container.rs  infrastructure.rs  logging.rs  main.rs  model.rs  router.rs  trace.rs  tracer.rs  tracing.rs  use_case.rs  usecases.rs
src/domain/: repository.rs  service.rs
src/domain/model/: user.rs
src/domain/model/user/: fullname.rs  user_dto.rs  user_entity.rs
src/domain/repository/: user_repository.rs
src/entity/: user.rs
src/handlers/: auth_handler.rs  health_handler.rs
src/infrastructure/: db.rs  opentelemetry.rs
src/infrastructure/db/entity/: user.rs  users.rs
src/infrastructure/db/repository/: user_repository.rs
src/infrastructure/repository/: user_repository.rs
src/interface/: auth_handler.rs  health_handler.rs  user_handler.rs
src/model/: api.rs  custom_error.rs
src/models/: auth.rs  user.rs
src/use_case/: use_case.rs  user_use_case.rs
src/usecase/: auth_usecase.rs  user_usecase.rs
src/usecases/: auth_usecase.rs  user_usecase.rs
