[package]
name = "totp-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.83"
axum = "0.7.5"
dotenv = "0.15.0"
opentelemetry = "0.22.0"
opentelemetry-otlp = "0.15.0"
opentelemetry_sdk = { version = "0.22.1", features = ["rt-tokio"] }
qrcode = "0.14.0"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.116"
thiserror = "1.0.60"
tokio = { version="1.37.0", features=["full"] }
totp-rs = { version = "5.5.1", features = ["qr", "gen_secret"] }
tower-http = { version = "0.5.2", features = ["trace", "timeout"] }
tracing = "0.1.40"
tracing-opentelemetry = "0.23.0"
tracing-subscriber = { version = "0.3.18", features = ["json", "env-filter"] }
