[package]
name = "rust-axum-ddd-example"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.83"
axum = "0.7.5"
chrono = "0.4.38"
derive-getters = "0.4.0"
derive-new = "0.6.0"
dotenv = "0.15.0"
garde = { version = "0.18.0", features = ["full"] }
opentelemetry = "0.22.0"
opentelemetry-otlp = "0.15.0"
opentelemetry_sdk = { version = "0.22.1", features = ["rt-tokio"] }
sea-orm = { version = "0.12.15", features = ["sqlx-postgres", "runtime-tokio-native-tls", "mock", "macros", "debug-print"] }
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.116"
sqlx = { version = "0.7.4", features = ["postgres"] }
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["trace", "timeout"] }
tracing = "0.1.40"
tracing-opentelemetry = "0.23.0"
tracing-subscriber = { version = "0.3.18", features = ["json", "env-filter"] }
regex = "1.10.4"
thiserror = "1.0.61"
